--- a/src/main/resources/templates/calculations/create.html
+++ b/src/main/resources/templates/calculations/create.html
@@ -1,7 +1,7 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org"
       th:replace="~{layout :: layout(~{::title}, 'customers', ~{::content}, ~{::extraHead}, ~{::extraScripts})}">
 <head>
-    <title>Новый расчёт</title>
+    <title>Заполнение данных по объекту</title>
     <th:block th:fragment="extraHead"></th:block>
 </head>
 <body>
@@ -22,19 +22,13 @@
                     <label class="form-label">Наименование *</label>
                     <input type="text" class="form-control" name="name" th:value="${calculationForm.name}" required>
                 </div>
-                <div class="col-md-6">
-                    <label class="form-label">Тип системы *</label>
-                    <select class="form-select" name="systemType">
-                        <option th:each="type : ${systemTypes}" th:value="${type}" th:text="${type}" th:selected="${type == calculationForm.systemType}"></option>
-                    </select>
-                </div>
                 <div class="col-12">
                     <label class="form-label">Описание</label>
                     <textarea class="form-control" name="description" rows="3" th:text="${calculationForm.description}"></textarea>
                 </div>
                 <div class="d-flex justify-content-between mt-3">
                     <a class="btn btn-outline-secondary" th:href="@{'/sites/' + ${site.id}}">Отмена</a>
-                    <button type="submit" class="btn btn-primary">Создать</button>
+                    <button type="submit" class="btn btn-primary">Сохранить и продолжить</button>
                 </div>
             </form>
         </div>
