--- a/src/main/resources/templates/calculations/wizard-step7.html
+++ b/src/main/resources/templates/calculations/wizard-step7.html
@@ -33,6 +33,7 @@
                 <tr>
                     <th>Код</th>
                     <th>Материал</th>
+                    <th>Категория</th>
                     <th>Ед.</th>
                     <th>Количество</th>
                 </tr>
@@ -41,8 +42,9 @@
                 <tr th:each="item : ${result.items()}">
                     <td th:text="${item.materialCode()}"></td>
                     <td th:text="${item.materialName()}"></td>
+                    <td th:text="${item.category()}"></td>
                     <td th:text="${item.unit()}"></td>
-                    <td th:text="${item.quantity()}"></td>
+                    <td th:text="${#numbers.formatDecimal(item.quantity(), 1, 'COMMA', 2, 'POINT')}"></td>
                 </tr>
                 </tbody>
             </table>
