--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -50,11 +50,26 @@
         <th:block th:replace="${content}"></th:block>
     </div>
 </main>
+
+<div class="modal fade" id="attachmentPreviewModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="attachmentPreviewTitle">Просмотр файла</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+            </div>
+            <div class="modal-body" id="attachmentPreviewBody" style="min-height: 400px;">
+                <!-- сюда подставляем iframe/img -->
+            </div>
+        </div>
+    </div>
+</div>
 <footer class="border-top py-3 mt-auto text-center text-muted small">
     ObjectMAnnager © 2025
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="/js/main.js"></script>
 <th:block th:if="${extraScripts != null}" th:replace="${extraScripts}"></th:block>
 </body>
 </html>
